--- a/src/AvaloniaUI/ClientExplorer.AvaloniaUI/Views/MainWindow.axaml
+++ b/src/AvaloniaUI/ClientExplorer.AvaloniaUI/Views/MainWindow.axaml
@@ -4,18 +4,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:ClientExplorer.Shared.ViewModels;assembly=ClientExplorer.Shared.ViewModels"
         x:Class="ClientExplorer.AvaloniaUI.MainWindow"
-        
-        
-        Icon="/Assets/avalonia-logo.ico"
-        Title="ClientExplorer.AvaloniaUI">
 
-        <!-- mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" -->
-    <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
+        mc:Ignorable="d" d:DesignWidth="1325" d:DesignHeight="706"
+
+        Icon="/Assets/avalonia-logo.ico"
+        Title="ClientExplorer"
+        WindowState="Maximized"
+        WindowStartupLocation="CenterScreen">
+
+
+  <Design.DataContext>
+    <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainViewModel/>
-    </Design.DataContext>
-  
+    <vm:MainViewModel />
+  </Design.DataContext>
+
   <Border
     Padding="10"
     CornerRadius="5">
@@ -29,149 +32,54 @@
     <!--   </ExperimentalAcrylicBorder.Material> -->
     <!-- </ExperimentalAcrylicBorder> -->
 
+
     <StackPanel>
+      <!-- Панель - 'Основная' -->
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="Auto" />
+          <ColumnDefinition Width="Auto" />
+          <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
 
-      <!-- Панель - `Клиент` -->
-      <StackPanel>
-        <Label x:Name="LabelClientName">Наименование клиента</Label>
-        <ComboBox x:Name="ComboBoxClientName"
-                  Items="{Binding Clients}">
-          <!-- <ComboBox.ItemTemplate> -->
-          <!--   <DataTemplate> -->
-          <!--     <TextBlock Text="{Binding  ClientEntityViewModel.Name}"></TextBlock> -->
-          <!--   </DataTemplate> -->
-          <!-- </ComboBox.ItemTemplate> -->
-        </ComboBox>
-      </StackPanel>
+        <!-- Панель - `Клиент` -->
+        <Grid
+          Grid.Column="0"
+          Margin="6">
+          
+          <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+          </Grid.RowDefinitions>
 
-      <!-- Панель - `Действий - настроек` -->
-      <StackPanel Orientation="Horizontal">
-
-        <StackPanel>
-          <!-- Групп - `Новый объект` -->
-          <Grid>
-
-            <Grid.RowDefinitions>
-              <RowDefinition Height="Auto" />
-              <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-
-            <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="Auto" />
-              <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-
-            <!-- Заголоквок группы - `Новый объект` -->
-            <Border
-              ZIndex="1"
-              Padding="0,0"
-              Margin="6,0,0,0"
-              BorderBrush="white"
-              BorderThickness="1"
-              CornerRadius="6">
-
-              <Label>Новый объект</Label>
-
-            </Border>
-
-            <!-- Контент группы - `Новый объект` -->
-            <Border
-
-              Grid.Row="0" Grid.Column="0"
-              Grid.RowSpan="2" Grid.ColumnSpan="2"
-              Margin="0,12,0,0"
-              Padding="6,12,6,6"
-              BorderThickness="1"
-              BorderBrush="White"
-              CornerRadius="6">
-
-              <StackPanel>
-
-                <StackPanel>
-                  <Label x:Name="LabelCityName">Населённый пункт (НП)</Label>
-                  <ComboBox x:Name="ComboBoxCityName"></ComboBox>
-                </StackPanel>
-
-                <StackPanel>
-                  <Label x:Name="LabelStreetName">Улица</Label>
-                  <ComboBox x:Name="ComboBoxStreetName"></ComboBox>
-                </StackPanel>
-
-                <StackPanel>
-                  <Label x:Name="LabelHouseNumber">Номер дома</Label>
-                  <ComboBox x:Name="ComboBoxHouseNumber"></ComboBox>
-                </StackPanel>
-
-                <StackPanel>
-                  <Label x:Name="LabelAdditionalParametr">Дополнительные параметры</Label>
-                  <TextBox x:Name="TextBoxAdditionalParametr"></TextBox>
-                </StackPanel>
-                <CheckBox x:Name="CheckBoxLocationAsFolder" Content="НП - как папка, например у МОНЕТКИ"></CheckBox>
-
-              </StackPanel>
-
-            </Border>
-
-          </Grid>
-
-          <!-- Группа - `Создать папки` -->
-          <Grid>
-
-            <Grid.RowDefinitions>
-              <RowDefinition Height="Auto" />
-              <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-
-            <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="Auto" />
-              <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-
-            <!-- Заголовок группы - `Создать папки` -->
-            <Border
-              Grid.Row="0" Grid.Column="0"
-              ZIndex="1"
-              Padding="0,0"
-              Margin="6,0,0,0"
-              BorderBrush="white"
-              BorderThickness="1"
-              CornerRadius="6">
-
-              <Label>Создать папки</Label>
-
-            </Border>
-
-            <!-- Контент группы - `Создать папки` -->
-            <Border
-
-              Grid.Row="0" Grid.Column="0"
-              Grid.RowSpan="2" Grid.ColumnSpan="2"
-              Margin="0,12,0,0"
-              Padding="6,12,6,6"
-              BorderThickness="1"
-              BorderBrush="White"
-              CornerRadius="6">
-
-              <StackPanel>
-                <CheckBox x:Name="CheckBoxDocument" Content="01 Документы"></CheckBox>
-                <CheckBox x:Name="CheckBoxPhoto" Content="02 Фото"></CheckBox>
-                <CheckBox x:Name="CheckBoxDesign" Content="03 Дизайн"></CheckBox>
-                <CheckBox x:Name="CheckBoxProject" Content="04 Проект"></CheckBox>
-                <CheckBox x:Name="CheckBoxApprovalInAdministration" Content="05 Согласование в администрации"></CheckBox>
-                <StackPanel Orientation="Horizontal">
-                  <CheckBox x:Name="CheckBoxUserVersionFolderName"></CheckBox>
-                  <TextBox x:Name="TextBoxUserVersionFolderName"></TextBox>
-                </StackPanel>
-              </StackPanel>
-
-            </Border>
-
-          </Grid>
-
-        </StackPanel>
+          <Label
+            Grid.Row="0"
+            x:Name="LabelClientName"
+            Content="Клиенты"/>
+          
+          <TextBox
+            Grid.Row="1"
+            x:Name="TextBoxSearchFilter"
+            Margin="0 6"/>
+          
+          <ListBox
+            Grid.Row="2"
+            Height="560"
+            Width="460"
+            Items="{Binding Clients}">
+            <ListBox.ItemTemplate>
+              <DataTemplate>
+                <TextBlock Text="{Binding  Name}"/>
+              </DataTemplate>
+            </ListBox.ItemTemplate>
+          </ListBox>
+        </Grid>
 
         <!-- Группа - `Существующий объект` -->
-        <Grid>
+        <Grid
+          Grid.Column="1"
+          Margin="6">
 
           <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -213,25 +121,156 @@
 
         </Grid>
 
-      </StackPanel>
+        <!-- Панель - `Действий - настроек` -->
+        <StackPanel
+          Grid.Column="2"
+          Margin="6"
+          Orientation="Horizontal">
+
+          <StackPanel>
+            <!-- Групп - `Новый объект` -->
+            <Grid>
+
+              <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+              </Grid.RowDefinitions>
+
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+              </Grid.ColumnDefinitions>
+
+              <!-- Заголоквок группы - `Новый объект` -->
+              <Border
+                ZIndex="1"
+                Padding="0,0"
+                Margin="6,0,0,0"
+                BorderBrush="white"
+                BorderThickness="1"
+                CornerRadius="6">
+
+                <Label>Новый объект</Label>
+
+              </Border>
+
+              <!-- Контент группы - `Новый объект` -->
+              <Border
+
+                Grid.Row="0" Grid.Column="0"
+                Grid.RowSpan="2" Grid.ColumnSpan="2"
+                Margin="0,12,0,0"
+                Padding="6,12,6,6"
+                BorderThickness="1"
+                BorderBrush="White"
+                CornerRadius="6">
+
+                <StackPanel>
+
+                  <StackPanel>
+                    <Label x:Name="LabelCityName">Населённый пункт (НП)</Label>
+                    <ComboBox x:Name="ComboBoxCityName"></ComboBox>
+                  </StackPanel>
+
+                  <StackPanel>
+                    <Label x:Name="LabelStreetName">Улица</Label>
+                    <ComboBox x:Name="ComboBoxStreetName"></ComboBox>
+                  </StackPanel>
+
+                  <StackPanel>
+                    <Label x:Name="LabelHouseNumber">Номер дома</Label>
+                    <ComboBox x:Name="ComboBoxHouseNumber"></ComboBox>
+                  </StackPanel>
+
+                  <StackPanel>
+                    <Label x:Name="LabelAdditionalParametr">Дополнительные параметры</Label>
+                    <TextBox x:Name="TextBoxAdditionalParametr"></TextBox>
+                  </StackPanel>
+                  <CheckBox x:Name="CheckBoxLocationAsFolder" Content="НП - как папка, например у МОНЕТКИ"></CheckBox>
+
+                </StackPanel>
+
+              </Border>
+
+            </Grid>
+
+            <!-- Группа - `Создать папки` -->
+            <Grid>
+
+              <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+              </Grid.RowDefinitions>
+
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+              </Grid.ColumnDefinitions>
+
+              <!-- Заголовок группы - `Создать папки` -->
+              <Border
+                Grid.Row="0" Grid.Column="0"
+                ZIndex="1"
+                Padding="0,0"
+                Margin="6,0,0,0"
+                BorderBrush="white"
+                BorderThickness="1"
+                CornerRadius="6">
+
+                <Label>Создать папки</Label>
+
+              </Border>
+
+              <!-- Контент группы - `Создать папки` -->
+              <Border
+
+                Grid.Row="0" Grid.Column="0"
+                Grid.RowSpan="2" Grid.ColumnSpan="2"
+                Margin="0,12,0,0"
+                Padding="6,12,6,6"
+                BorderThickness="1"
+                BorderBrush="White"
+                CornerRadius="6">
+
+                <StackPanel>
+                  <CheckBox x:Name="CheckBoxDocument" Content="01 Документы"></CheckBox>
+                  <CheckBox x:Name="CheckBoxPhoto" Content="02 Фото"></CheckBox>
+                  <CheckBox x:Name="CheckBoxDesign" Content="03 Дизайн"></CheckBox>
+                  <CheckBox x:Name="CheckBoxProject" Content="04 Проект"></CheckBox>
+                  <CheckBox x:Name="CheckBoxApprovalInAdministration" Content="05 Согласование в администрации"></CheckBox>
+                  <StackPanel Orientation="Horizontal">
+                    <CheckBox x:Name="CheckBoxUserVersionFolderName"></CheckBox>
+                    <TextBox x:Name="TextBoxUserVersionFolderName"></TextBox>
+                  </StackPanel>
+                </StackPanel>
+
+              </Border>
+
+            </Grid>
+
+          </StackPanel>
+
+
+        </StackPanel>
+
+      </Grid>
 
       <!-- Панель - `Кнопок` -->
       <StackPanel
         Orientation="Horizontal"
         HorizontalAlignment="Right">
-        
+
         <Button x:Name="ButtonCreateDirectory" Content="Создать каталоги"></Button>
         <Button x:Name="ButtonCancel" Content="Отмена"></Button>
-        
+
       </StackPanel>
-      
+
       <!-- Панель - `Информации` -->
       <StackPanel>
         <Label x:Name="LabelInfo"
-               Content="{Binding StatusInfo}"/>
+               Content="{Binding StatusInfo}" />
       </StackPanel>
 
     </StackPanel>
-    
   </Border>
 </Window>
